--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,10 +1,8 @@
 @import "tailwindcss";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 
  
-@theme inline {
+inline {
   --animate-aurora: aurora 60s linear infinite;
   @keyframes aurora {
     from {
